--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,10 +1,4 @@
-<main class="page__main">
-  <h2>Este es el starter kit de Adalab</h2>
-  <p>Lo usamos para aprender:</p>
-  <ul>
-    <li>Sass</li>
-    <li>HTML partials</li>
-    <li>Gulp</li>
-    <li>y muchas cosas más</li>
-  </ul>
+<main>
+  <partial name="_section1.html"></partial>
+  <partial name="_section2.html"></partial>
 </main>
