--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -12,5 +12,9 @@
     <link rel="stylesheet" href="./assets/css/main.css" />
   </head>
 
-  <body></body>
+  <body>
+    <partial name="_header.html"></partial>
+    <partial name="_main.html"></partial>
+    <partial name="_footer.html"></partial>
+  </body>
 </html>
