--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -1,3 +1,3 @@
-<fotter class="page__footer">
-  <small>&copy; Todos los derechos reservados</small>
-</fotter>
+<footer class="footer">
+  <p>2019 - Titulo del blog</p>
+</footer>
