--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -1,4 +1,6 @@
-<header class="page__header">
-  <img src="./assets/images/logo-adalab.png" alt="Adalab">
-  <h1>@@title</h1>
+<header>
+  <div class=" header__container">
+    <div class="header__img"></div>
+    <h1>Titulo del blog</h1>
+  </div>
 </header>
