first styles included for header

--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -13,8 +13,8 @@
   </head>
 
   <body>
-    <partial name="_header.html"></partial>
-    <partial name="_main.html"></partial>
-    <partial name="_footer.html"></partial>
+    <partial src="_header.html"></partial>
+    <partial src="_main.html"></partial>
+    <partial src="_footer.html"></partial>
   </body>
 </html>
