--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,4 +1,4 @@
 <main>
-  <partial name="_section1.html"></partial>
-  <partial name="_section2.html"></partial>
+  <partial src="_section1.html"></partial>
+  <partial src="_section2.html"></partial>
 </main>
