--- a/_src/templates/partials/_section2.html
+++ b/_src/templates/partials/_section2.html
@@ -2,19 +2,19 @@
   <div class="section2__circle"></div>
   <div class="section2__autor"></div>
   <div class="section2__aside">
-    <div class="section2__aside--sec">
-      <p>Seccion 1</p>
-      <p>Seccion 2</p>
-      <p>Seccion 3</p>
-      <p>Seccion 4</p>
-      <p>Seccion 5</p>
-    </div>
-    <div class="section2__aside--cat">
-      <p>Categoria 1</p>
-      <p>Categoria 2</p>
-      <p>Categoria 3</p>
-      <p>Categoria 4</p>
-      <p>Categoria 5</p>
-    </div>
+    <ul class="section2__aside--sec">
+      <li>Seccion 1</li>
+      <li>Seccion 2</li>
+      <li>Seccion 3</li>
+      <li>Seccion 4</li>
+      <li>Seccion 5</li>
+    </ul>
+    <ul class="section2__aside--cat">
+      <li>Categoria 1</li>
+      <li>Categoria 2</li>
+      <li>Categoria 3</li>
+      <li>Categoria 4</li>
+      <li>Categoria 5</li>
+    </ul>
   </div>
 </section>
