--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -1,5 +1,5 @@
+@import "core/reset";
 @import "core/settings";
 @import "components/page";
 @import "components/header";
-@import "components/links";
 @import "components/footer";
