mobile version finished

--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,4 +1,7 @@
 <main>
-  <partial src="_section1.html"></partial>
+  <partial src="_section1.html" name="@@article"></partial>
+  <partial src="_section1.html" name="@@article"></partial>
+  <partial src="_section1.html" name="@@article"></partial>
+  <partial src="_section1.html" name="@@article"></partial>
   <partial src="_section2.html"></partial>
 </main>
