--- a/_src/templates/partials/_section2.html
+++ b/_src/templates/partials/_section2.html
@@ -1,6 +1,14 @@
 <section class="section2">
-  <div class="section2__circle"></div>
-  <div class="section2__autor"></div>
+  <div class="section2__container">
+    <div class="section2__circle"></div>
+    <div class="section2__autor">
+      <h4>Autor</h4>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi iusto
+        accusamus repellat, ut magnam.
+      </p>
+    </div>
+  </div>
   <div class="section2__aside">
     <ul class="section2__aside--sec">
       <li>Seccion 1</li>
