--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -3,3 +3,5 @@
 @import "components/page";
 @import "components/header";
 @import "components/footer";
+@import "components/section1";
+@import "components/section2";
